[package]
name = "eth-stealth-gas-tickets"
version = "0.2.3"
edition = "2021"
authors = ["kassandra.eth 0xDADA@protonmail.com"]
license = "MIT"
description = "stealth gas tickets library for ethereum using blind RSA signatures in rust"
readme = "README.md"
homepage = "https://github.com/kassandraoftroy/eth-stealth-gas-tickets"
repository = "https://github.com/kassandraoftroy/eth-stealth-gas-tickets"
keywords = ["ethereum", "eth", "privacy", "stealth", "secp256k1"]


[dependencies]
blind-rsa-signatures = "0.15.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10.8"
alloy = { version = "0.9.2", features = [
    "sol-types",
    "rpc-types",
] }

